Fix content covered by navbar

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -10,6 +10,9 @@
     padding: 10px 15px;
 }
 
+main > .container {
+    padding: 60px 15px 0;
+}
 
 .a {
     display: block;
